language/move-lang/tests/move_check/borrows/call_mutual_borrows_invalid.exp
error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/call_mutual_borrows_invalid.move:15:9
   │
14 │         let f = freeze(s1);
   │                 ---------- It is still being borrowed by this reference
15 │         mut_imm(s1, f);
   │         ^^^^^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/call_mutual_borrows_invalid.move:17:9
   │
16 │         let f = &s1.f;
   │                 ----- Field 'f' is still being borrowed by this reference
17 │         mut_imm(s1, f);
   │         ^^^^^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/call_mutual_borrows_invalid.move:19:9
   │
18 │         let f = &s1.f;
   │                 ----- It is still being borrowed by this reference
19 │         mut_imm(&mut s1.f, f);
   │         ^^^^^^^^^^^^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/call_mutual_borrows_invalid.move:21:9
   │
20 │         let f = id(&s1.f);
   │                 --------- It is still being borrowed by this reference
21 │         id_mut(&mut s1.f); f;
   │         ^^^^^^^^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/call_mutual_borrows_invalid.move:23:9
   │
23 │         mut_mut(s1, s1);
   │         ^^^^^^^^^^^^^^^
   │         │       │
   │         │       It is still being mutably borrowed by this reference
   │         Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/call_mutual_borrows_invalid.move:25:9
   │
24 │         let f = &mut s1.f;
   │                 --------- Field 'f' is still being mutably borrowed by this reference
25 │         mut_mut(s1, f);
   │         ^^^^^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/call_mutual_borrows_invalid.move:26:9
   │
26 │         mut_mut(&mut s1.f, s1);
   │         ^^^^^^^^^^^^^^^^^^^^^^
   │         │       │
   │         │       Field 'f' is still being mutably borrowed by this reference
   │         Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/call_mutual_borrows_invalid.move:28:9
   │
27 │         let s = id_mut(s1);
   │                 ---------- It is still being mutably borrowed by this reference
28 │         id_mut(s1);
   │         ^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/call_mutual_borrows_invalid.move:31:9
   │
30 │         let f = id_mut(&mut s1.f);
   │                 ----------------- Field 'f' is still being mutably borrowed by this reference
31 │         mut_mut(s1, f);
   │         ^^^^^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/call_mutual_borrows_invalid.move:32:9
   │
32 │         mut_mut(id_mut(&mut s1.f), s1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │       │
   │         │       Field 'f' is still being mutably borrowed by this reference
   │         Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

